# Copyright (c) 2020 The Huhi Software Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Huhi Software
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# you can obtain one at http://mozilla.org/MPL/2.0/.

huhi_extensions_resources = [
  "//huhi/browser/extensions:resources",
  "//huhi/components/huhi_rewards/browser/buildflags",
  "//huhi/components/huhi_webtorrent/browser/buildflags",
]
