import("//huhi/components/huhi_wallet/buildflags/buildflags.gni")

assert(huhi_wallet_enabled)

source_set("huhi_wallet") {
  sources = [
    "huhi_wallet_delegate_impl.cc",
    "huhi_wallet_delegate_impl.h",
  ]
  deps = [
    "//huhi/browser/extensions",
    "//huhi/components/huhi_wallet:huhi_wallet",
    "//chrome/browser/extensions:extensions",
    "//extensions/browser",
  ]
}
