# Copyright (c) 2020 The Huhi Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

huhi_chrome_browser_importer_sources = []
huhi_chrome_browser_importer_deps = []

if (!is_android) {
  huhi_chrome_browser_importer_sources += [
    "//huhi/browser/importer/huhi_external_process_importer_client.cc",
    "//huhi/browser/importer/huhi_external_process_importer_client.h",
    "//huhi/browser/importer/huhi_external_process_importer_host.cc",
    "//huhi/browser/importer/huhi_external_process_importer_host.h",
    "//huhi/browser/importer/huhi_in_process_importer_bridge.cc",
    "//huhi/browser/importer/huhi_in_process_importer_bridge.h",
  ]

  huhi_chrome_browser_importer_deps += [
    "//base",
    "//huhi/common/importer:interfaces",
    "//content/public/browser",
    "//extensions/buildflags",
    "//mojo/public/cpp/bindings:bindings",
  ]
}
